<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="api_key">a6666c7409514392aa1bff7004522f6f</string>

    <!-- Main Network Check Fragment -->
    <string name="oops_there_was_a_problem_with_the_connection">Oops, there was a problem with the connection…</string>
    <string name="check_your_internet_connection_and_try_again">Check your internet connection and try again.</string>
    <string name="try_again">Try again</string>

    <!-- Main -->
    <string name="your_gateway_to_culinary_delights">Your gateway to culinary delights</string>
    <string name="find_a_recipe">Find a recipe</string>
    <string name="categories">Categories</string>
    <string name="recipes">Recipes</string>
    <string name="no_recipes_found_for_this_category">No recipes in this category today :(\nPlease check again tomorrow</string>
    <string name="random_200_recipes_each_day">200 random recipes each day</string>
    <string name="find_your_favorite_recipe">Find your favorite recipe</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="your_favorite_flavors_all_in_one_place">Your favorite flavors all in one place</string>
    <string name="no_favorites_yet_n_it_s_the_perfect_time_to_pick_something">No favorites yet?\nIt\'s the perfect time to pick something!</string>
    <string name="silence_in_the_cart_pick_a_recipe_and_add_it_to_the_cart">Silence in the cart?\nPick a recipe and add it to the cart!</string>
    <string name="shopping_list">Shopping list</string>
    <string name="name_of_the_dish">Name of the dish</string>
    <string name="preparation_time_label">Preparation time</string>
    <string name="preparation_time_result">15m</string>
    <string name="ready_in_minutes_label">Ready in minutes</string>
    <string name="cooking_time_result">10h 15m</string>
    <string name="number_of_servings_label">Number of servings</string>
    <string name="number_of_servings_result">4 servings</string>
    <string name="rating_of_the_dish">3.5</string>
    <string name="aggregate_likes">(200)</string>
    <string name="ingredients">Ingredients</string>
    <string name="step_by_step">Step by step</string>
    <string name="nutrition_values">Nutrition values</string>
    <string name="tags">Tags</string>

</resources>