<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteFrost"
    tools:context=".ui.main.fragments.MainNetworkCheckFragment">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:src="@drawable/ic_no_internet_connection"
        app:layout_constraintBottom_toTopOf="@+id/tvTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/oops_there_was_a_problem_with_the_connection"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/ivImage"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/check_your_internet_connection_and_try_again"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTryAgain"
        app:layout_constraintEnd_toEndOf="@+id/tvTextView1"
        app:layout_constraintStart_toStartOf="@+id/tvTextView1"
        app:layout_constraintTop_toBottomOf="@+id/tvTextView1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_custom_button"
        android:text="@string/try_again"
        android:textColor="@color/whiteFrost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
